bootstrap-joining-demo/aws-api/src/main/resources/CloudFormation/akka-cluster.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  InstanceCount:
    Description: Number of EC2 instances for your Akka Cluster (must be between 2 and 50)
    Type: Number
    Default: 3
    MinValue: 2
    MaxValue: 50
    ConstraintDescription: Must be a number between 2 and 50
  InstanceType:
      Description: Instance type to launch EC2 instances.
      Type: String
      Default: t2.medium
      AllowedValues: [ t2.medium, t2.large ]
  KeyPair:
      Description: "Key Pair (for SSH access)"
      Type: AWS::EC2::KeyPair::KeyName
      AllowedPattern: ".+"
Resources:
  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-97785bed
      IamInstanceProfile: {"Ref": "IAMInstanceProfile"}
      InstanceType: {"Ref": "InstanceType"}
      KeyName: {"Ref": "KeyPair"}
      SecurityGroups:
        - Ref: AkkaClusterSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          curl https://bintray.com/sbt/rpm/rpm | sudo tee /etc/yum.repos.d/bintray-sbt-rpm.repo
          sudo yum -y install sbt
          sudo yum -y install git
          git clone https://github.com/akka/akka-management.git
          cd akka-management/bootstrap-joining-demo/aws-api/
          sbt compile
          MY_IP=`curl -s http://169.254.169.254/latest/meta-data/local-ipv4`
          sbt run -Dakka.management.http.hostname=$MY_IP -Dakka.remote.netty.tcp.hostname=$MY_IP &
  AkkaAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchConfigurationName: {"Ref": "LaunchConfiguration"}
      AvailabilityZones:
        Fn::GetAZs: ""
      MinSize: {"Ref": "InstanceCount"}
      MaxSize: {"Ref": "InstanceCount"}
      DesiredCapacity: {"Ref": "InstanceCount"}
      Tags:
        - Key: service
          Value: products-api
          PropagateAtLaunch: true
  IAMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: EC2ReadOnlyRole
  EC2ReadOnlyPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      Roles:
        - Ref: EC2ReadOnlyRole
      PolicyName: EC2ReadOnlyPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
           Effect: "Allow"
           Action:
            - "ec2:DescribeInstances"
           Resource: "*"
  EC2ReadOnlyRole:
    Type: 'AWS::IAM::Role'
    Properties:
      Path: "/"
      AssumeRolePolicyDocument:
        Statement:
          - Action:
            - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
  AkkaClusterSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: for akka
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: {"Ref": "SSHLocation"}
  AkkaClusterSecurityGroupIngressForPeers2551:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName: {"Ref": "AkkaClusterSecurityGroup"}
      IpProtocol: tcp
      FromPort: 2551
      ToPort: 2551
      SourceSecurityGroupName: {"Ref": "AkkaClusterSecurityGroup"}
  AkkaClusterSecurityGroupIngressForPeers19999:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName: {"Ref": "AkkaClusterSecurityGroup"}
      IpProtocol: tcp
      FromPort: 19999
      ToPort: 19999
      CidrIp: {"Ref": "SSHLocation"}
